--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 
     .site-footer {
-  background: #3e5390;
+  background: #a4a5a6;
   color: #262121;
   padding: 25px 20px 15px;
   font-family: sans-serif;
