--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 
     .site-footer {
-  background: #a4a5a6;
+  background: #babbbe;
   color: #262121;
   padding: 25px 20px 15px;
   font-family: sans-serif;
@@ -127,7 +127,7 @@
 }
 
 .footer-socials a {
-  color: #221a1a;
+  color: #45594e;
   margin-left: 15px;
   font-size: 20px;
   transition: color 0.3s;
@@ -143,6 +143,7 @@
   font-size: 14px;
   opacity: 0.7;
 }
+
 
 
 
